Changes from jTDS 1.2.6
=======================

08/16/2012 - Holger Rehn
 o Removed WebRing code from the project web site (Bug #660).


|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
||                                                                           ||
||                      SourceForge Project Upgrade                          ||
||																			 ||
|| The previous tracker item IDs have been replaced by individual bug/patch  ||
|| IDs and are no longer valid.                                              ||
||                                                                           ||
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||


===============================================================================
08/15/2012 - jTDS 1.2.6 released
===============================================================================

Changes from jTDS 1.2.2
=======================

12/09/2009 - Holger Rehn
 o Updated JCIFS to version 1.3.12
 o Corrected bug [2911266], Default response timeout of 30 seconds if using
   named pipes via JCIFS.

12/07/2009 - Holger Rehn
 o Implemented PreparedStatement.toString(), feature request [2909009].

11/14/2009 - Holger Rehn
 o Corrected a bug leading to an empty string being returned by
   Connection.getCatalog() if ASA has been connected without specifying
   a server instance.
 o Corrected a bug that prevented 'SYS' from being returned by
   DatabaseMetaData.getSchemas().
 o Corrected a bug that prevented 'SYSTEM TABLE' to be returned by
   DatabaseMetaData.getTableTypes().

10/31/2009 - Holger Rehn
 o Corrected bug [2883066], Numeric overflow in conversion BigInteger/BIGINT.

10/30/2009 - Holger Rehn
 o Corrected bug [2021846], encoding specifications missing in ant tasks.
 o Corrected bug [2886423], meta data support for Sybase SQL Anywhere is wrong.

09/28/2009 - Holger Rehn
 o Corrected bug [2860742], getByte() causes overflow error for negative