@@ -7,9 +7,7 @@ echo Building jTDS...
 echo ----------------
 
 set LOCALCLASSPATH=%JAVA_HOME%\lib\tools.jar
-REM set LOCALCLASSPATH=%LOCALCLASSPATH%;%ANT_HOME%\lib\ant.jar
-REM set LOCALCLASSPATH=%LOCALCLASSPATH%;%ANT_HOME%\lib\optional.jar
-for %%i in (lib\*.jar) do call lcp.bat %%i
+for %%i in (lib\*.jar) do call :cp "%%i"
 
 echo.
 echo Building with classpath %LOCALCLASSPATH%
@@ -32,3 +30,8 @@ echo "location of the Java Virtual Machine you want to use."
 
 set LOCALCLASSPATH=
 set ANT_HOME=
+goto:EOF
+
+:cp
+set LOCALCLASSPATH=%LOCALCLASSPATH%;%1
+goto:EOF
