@@ -1,2 +1,0 @@
-set LOCALCLASSPATH=%LOCALCLASSPATH%;%1
-
